--- a/week1/index.html
+++ b/week1/index.html
@@ -16,7 +16,7 @@
      <div class="left-content">
 
         <div class="portfolio">
-         <div> <img class="image" src="img/hkmt.jpg" alt=""> </div>
+         <div> <img class="image" src="hkmt.jpg" alt=""> </div>
          <h2 class="name">Hikmet dag</h2>
          <p class="career">Engineer</p>
 
