--- a/week1/Homework/index.html
+++ b/week1/Homework/index.html
@@ -7,12 +7,14 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Resume</title>
     <link rel="stylesheet" href="index.css">
+    <!-- Goole font coppied from WWW.w3school.com -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600&display=swap" rel="stylesheet">
+    <!-- I added this ref link foe some special character like twitter sign.. -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <main class="main-content">
-
+<!-- I divided the page into two parts left and right -->
      <section class="left-section">
 
      <div class="left-content">
@@ -24,7 +26,9 @@
 
          <hr>
 
-         <ul>
+                   <ul>
+            <!-- &nbsp is used to put space between texts -->
+        
             <li><span>Nationality:</span> &nbsp; Kurdish</li>
             <li> <span>Date of Birth:</span> &nbsp; 04.01.1987</li>
             <li><span>Gender:</span> &nbsp; Male</li>
