--- a/week1/Homework/index.html
+++ b/week1/Homework/index.html
@@ -174,7 +174,7 @@
 </div>
 
 <div class="riht-tl-content">
-<h5 class="tl-title-2">tesol</h5>
+<h5 class="tl-title-2">Tesol</h5>
 <p class="para">
     Demonstrate basic foundational principles and design and plan 
     lessons to teach English as a second or foreign language effectively.
