Editting week2 projects

--- a/week2/Homework/index.html
+++ b/week2/Homework/index.html
@@ -58,12 +58,13 @@
       <div class="presentation">
         <div class="text">
           <h1>Learn without limits</h1>
+          
           <p>
             Get that "ready for anything" feeling with more than 5,000 courses,
             Professional Certificates, and degrees from world-class universities
             and companies.
-          </p>
-        </div>
+          </p></div>
+        
 
         <div class="buttons">
           <button class="joinBtn">Join for Free</button>
